Updated to WinApplication to run in Background

--- a/StickyKeysService/StickyKeysAgent.csproj
+++ b/StickyKeysService/StickyKeysAgent.csproj
@@ -1,7 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
+    <OutputType>WinExe</OutputType>
+    <TargetFramework>net8.0-windows</TargetFramework>
+    <UseWindowsForms>true</UseWindowsForms>
     <PublishSingleFile>true</PublishSingleFile>
     <RuntimeIdentifier>win-x64</RuntimeIdentifier>
     <SelfContained>false</SelfContained>
@@ -10,7 +11,13 @@
     <TrimUnusedDependencies>true</TrimUnusedDependencies>
     <DebugType>None</DebugType>
     <DebugSymbols>false</DebugSymbols>
+    <ApplicationIcon>stickykeys_FKG_icon.ico</ApplicationIcon>
   </PropertyGroup>
+  <ItemGroup>
+    <Content Include="stickykeys_FKG_icon.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
