Upgrade SDK and project configurations to .NET 9.0; updated launch and task settings for StickyKeysService.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,9 +10,9 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/StickyKeys/bin/Debug/net7.0/StickyKeys.dll",
+            "program": "${workspaceFolder}/StickyKeysService/bin/Debug/net9.0-windows/win-x64/StickyKeysAgent.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/StickyKeys",
+            "cwd": "${workspaceFolder}/StickyKeysService",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
             "console": "internalConsole",
             "stopAtEntry": false
