--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,9 +7,9 @@
             "type": "process",
             "args": [
                 "build",
-                "${workspaceFolder}/StickyKeys/StickyKeys.csproj",
+                "${workspaceFolder}/StickyKeysService.sln",
                 "/property:GenerateFullPaths=true",
-                "/consoleloggerparameters:NoSummary"
+                "/consoleloggerparameters:NoSummary;ForceNoAlign"
             ],
             "problemMatcher": "$msCompile"
         },
@@ -19,9 +19,9 @@
             "type": "process",
             "args": [
                 "publish",
-                "${workspaceFolder}/StickyKeys/StickyKeys.csproj",
+                "${workspaceFolder}/StickyKeysService.sln",
                 "/property:GenerateFullPaths=true",
-                "/consoleloggerparameters:NoSummary"
+                "/consoleloggerparameters:NoSummary;ForceNoAlign"
             ],
             "problemMatcher": "$msCompile"
         },
@@ -33,7 +33,7 @@
                 "watch",
                 "run",
                 "--project",
-                "${workspaceFolder}/StickyKeys/StickyKeys.csproj"
+                "${workspaceFolder}/StickyKeysService.sln"
             ],
             "problemMatcher": "$msCompile"
         }
