Refactor installer scripts and project configuration: updated output paths in Inno Setup script and added build-installer batch file for streamlined publishing process.

--- a/StickyKeysService/StickyKeysAgent.csproj
+++ b/StickyKeysService/StickyKeysAgent.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net9.0-windows</TargetFramework>
+    <BaseOutputPath>$(SolutionDir)dist\$(MSBuildProjectName)\</BaseOutputPath>
     <PublishDir>$(SolutionDir)publish\$(MSBuildProjectName)</PublishDir>
     <UseWindowsForms>true</UseWindowsForms>
     <PublishSingleFile>true</PublishSingleFile>
