--- a/StickyKeysService/StickyKeysAgent.csproj
+++ b/StickyKeysService/StickyKeysAgent.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net9.0-windows</TargetFramework>
@@ -14,6 +14,12 @@
     <DebugType>None</DebugType>
     <DebugSymbols>false</DebugSymbols>
     <ApplicationIcon>stickykeys_FKG_icon.ico</ApplicationIcon>
+    <AssemblyVersion>1.0.3.0</AssemblyVersion>
+    <FileVersion>1.0.3.0</FileVersion>
+    <InformationalVersion>1.0.3+Branch.master.Sha.39154b8f273a1c573e0e19830cb38faa227a8265</InformationalVersion>
+    <Version>1.0.3</Version>
+    <Copyright>Copyright © 2025</Copyright>
+    <Company>phob</Company>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.6" />
@@ -22,7 +28,6 @@
     <PackageReference Include="Serilog.Extensions.Hosting" Version="9.0.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
   </ItemGroup>
-
   <ItemGroup>
     <None Update="config.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
